--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,14 @@ h3 {
 #third {
   background-color: #fbffb5;
   padding: 20px;
-  margin-top: 30px;
 }
 
 iframe {
-  width: 97%;
-  margin: 30px, 1.5%;
+  width: 100%;
+}
+
+#width {
+  padding-top: 30px;
+  padding-right: 20px;
+  margin-right: 20px;
 }
